--- a/开源项目作业.md
+++ b/开源项目作业.md
@@ -38,8 +38,8 @@ TensorFlow 最初由Google大脑小组（隶属于Google机器智能研究机构
 
 2. 非官方接口地址如下：
 
-    Julia: https://github.com/malmaud/TensorFlow.jl
-    Node.js https://github.com/node-tensorflow/node-tensorflow
+    Julia: https://github.com/malmaud/TensorFlow.jl <br>
+    Node.js https://github.com/node-tensorflow/node-tensorflow <br>
     R: https://github.com/rstudio/tensorflow
 
 ### 1.3. TensorFlow的特性
